--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
    
     <title>Chirp Boards</title>
   </head>
-  <body style = "background-color: #3a3d3d">
+  <body style = "background-color: #373737">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
