More style changes

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,8 +8,21 @@
    
     <title>Chirp Boards</title>
   </head>
-  <body style = "background-color: #373737">
+  <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
 </html>
+
+
+<style>
+  html {
+    background-color: rgb(110, 110, 110);
+    background: linear-gradient(180deg, rgb(110, 110, 110) 0%, rgb(75, 75, 75) 100%);
+    min-height: 100%;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+  }
+</style>
