Major UI change, inbox fetch fix

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -17,8 +17,8 @@
 
 <style>
   html {
-    background-color: rgb(110, 110, 110);
-    background: linear-gradient(180deg, rgb(110, 110, 110) 0%, rgb(75, 75, 75) 100%);
+    background: linear-gradient(180deg, rgb(75, 75, 75), 0%, rgb(110, 110, 110), 100%);
+    background-color: rgb(75, 75, 75);
     min-height: 100%;
     -webkit-background-size: cover;
     -moz-background-size: cover;
